@@ -73,6 +73,6 @@ DIST netbeans-websvc-6.0.tar.bz2 21262337 RMD160 aa0eea92a59cad8c5907c9a5be41a1a
 DIST netbeans-xml-6.0.tar.bz2 4404173 RMD160 6360765b44e988fb1ad4e529630ac1abbc4dae9d SHA1 92f489b03154a8153f8508387886afb9fbfa1959 SHA256 5d63287da3cfc42cbfb24ab619d1e96ff625124e1225c5377aa5d8c22deaecd9
 EBUILD netbeans-6.0.ebuild 32690 RMD160 53bf60c90e06f5fbb4b08a2363e750abf0a1b563 SHA1 9725266d8090a628691fa55fa179d5f8c72a3799 SHA256 a663b402ecd295ed316307b1be3772781e9f87c4013f6b1670a1ce1ca99d7669
 EBUILD netbeans-6.1-r1.ebuild 16545 RMD160 ae5471ae840869fbc962fceb48f8ee811efae729 SHA1 d4782ff9271907bbb98e64029be47bfce3d8677a SHA256 b5ffe94c7e7f66a7981c076c54fdc847a5773f4cf890c789935fbaee07299c2e
-EBUILD netbeans-6.5_beta.ebuild 28250 RMD160 628556a467272ff1496ee1fee416c3c15704b2ee SHA1 e25fe751e31a4f244959375ffb24de210bde6b89 SHA256 991a63bb49b305d48a8857bfdc71fc330657bf664bebec6cb09bcfe8d9453a6b
-MISC ChangeLog 25000 RMD160 c988e1faa42712176b6911f04ab15b3a2a96666a SHA1 086adcfde46619a385c3b2fa953f2497001a66fb SHA256 0874294cdfbcff7985fb73d55a625ae6d06eac8dbac4d733d0af2fe957086bb1
+EBUILD netbeans-6.5_beta.ebuild 29148 RMD160 7b54acc331e0a530665b431fbe7e6d162d6b4a25 SHA1 5731b8fe94c0181e33b6ec215c2b40a8eeca2dc2 SHA256 b245d540d871e02e5fa2319365c1affa725643909682305168d2cb9374420245
+MISC ChangeLog 25123 RMD160 a0ae9a8c812abc8347c2373569cde327a2978ff8 SHA1 5fc0bb1bf27f8182caefd32b590b1e9ab22bd9a8 SHA256 421040ee6129fe806915cf82b41a06225227590c1e444dec3ea4d3a11f9f1278
 MISC metadata.xml 1128 RMD160 9ba1b3fec0fedacd10416e7c61edfecada1912cd SHA1 997b3db42167a9e591c3667ffddd125bbb85fa98 SHA256 8c524b060fdbfc4aa432a528c2e78ad05eb20fcf4bc8973c1c8366699bb90b5a
